--- a/charts/kubezero-metrics/charts/kube-prometheus-stack/charts/prometheus-node-exporter/values.yaml
+++ b/charts/kubezero-metrics/charts/kube-prometheus-stack/charts/prometheus-node-exporter/values.yaml
@@ -45,7 +45,7 @@ kubeRBACProxy:
   image:
     registry: quay.io
     repository: brancz/kube-rbac-proxy
-    tag: v0.16.0
+    tag: v0.18.0
     sha: ""
     pullPolicy: IfNotPresent
 
@@ -87,6 +87,7 @@ kubeRBACProxy:
 service:
   enabled: true
   type: ClusterIP
+  clusterIP: ""
   port: 9100
   targetPort: 9100
   nodePort:
