--- a/charts/kubezero-argo/values.yaml
+++ b/charts/kubezero-argo/values.yaml
@@ -143,8 +143,8 @@ argo-cd:
 
     initContainers:
       - name: create-kubeconfig
-        image: public.ecr.aws/zero-downtime/zdt-argocd:v2.11.0
-        imagePullPolicy: IfNotPresent
+        image: '{{ default .Values.global.image.repository .Values.repoServer.image.repository }}:{{ default (include "argo-cd.defaultTag" .) .Values.repoServer.image.tag }}'
+        imagePullPolicy: '{{ default .Values.global.image.imagePullPolicy .Values.repoServer.image.imagePullPolicy }}'
         command:
           - /usr/local/bin/sa2kubeconfig.sh
           - /home/argocd/.kube/config
@@ -152,14 +152,7 @@ argo-cd:
         - mountPath: /home/argocd/.kube
           name: kubeconfigs
         securityContext:
-          runAsNonRoot: true
-          readOnlyRootFilesystem: true
-          allowPrivilegeEscalation: false
-          seccompProfile:
-            type: RuntimeDefault
-          capabilities:
-            drop:
-            - ALL
+          '{{- toYaml .Values.repoServer.containerSecurityContext | nindent 4 }}'
 
   server:
     # Rename former https port to grpc, works with istio + insecure
