--- a/charts/kubezero-ci/charts/jenkins/Chart.yaml
+++ b/charts/kubezero-ci/charts/jenkins/Chart.yaml
@@ -1,14 +1,14 @@
 annotations:
   artifacthub.io/category: integration-delivery
   artifacthub.io/changes: |
-    - Update `jenkins/jenkins` to version `2.452.2-jdk17`
+    - Update `configuration-as-code` to version `1836.vccda_4a_122a_a_e`
   artifacthub.io/images: |
     - name: jenkins
-      image: docker.io/jenkins/jenkins:2.452.2-jdk17
+      image: docker.io/jenkins/jenkins:2.452.3-jdk17
     - name: k8s-sidecar
-      image: docker.io/kiwigrid/k8s-sidecar:1.27.4
+      image: docker.io/kiwigrid/k8s-sidecar:1.27.5
     - name: inbound-agent
-      image: jenkins/inbound-agent:3248.v65ecb_254c298-1
+      image: jenkins/inbound-agent:3256.v88a_f6e922152-1
   artifacthub.io/license: Apache-2.0
   artifacthub.io/links: |
     - name: Chart Source
@@ -18,7 +18,7 @@ annotations:
     - name: support
       url: https://github.com/jenkinsci/helm-charts/issues
 apiVersion: v2
-appVersion: 2.452.2
+appVersion: 2.452.3
 description: 'Jenkins - Build great things at any scale! As the leading open source
   automation server, Jenkins provides over 1800 plugins to support building, deploying
   and automating any project. '
@@ -46,4 +46,4 @@ sources:
 - https://github.com/maorfr/kube-tasks
 - https://github.com/jenkinsci/configuration-as-code-plugin
 type: application
-version: 5.2.1
+version: 5.4.3
