--- a/charts/kubezero-logging/templates/eck/secrets.yaml
+++ b/charts/kubezero-logging/templates/eck/secrets.yaml
@@ -6,10 +6,9 @@ metadata:
   labels:
     common.k8s.elastic.co/type: elasticsearch
     elasticsearch.k8s.elastic.co/cluster-name: {{ template "kubezero-lib.fullname" $ }}
+    {{ include "kubezero-lib.labels" . | nindent 4 }}
   name: {{ template "kubezero-lib.fullname" $ }}-es-elastic-user
   namespace: {{ .Release.Namespace }}
-  labels:
-{{ include "kubezero-lib.labels" . | indent 4 }}
 data:
   elastic: {{ .Values.elastic_password | b64enc | quote }}
 ---
@@ -20,10 +19,9 @@ metadata:
   labels:
     common.k8s.elastic.co/type: elasticsearch
     elasticsearch.k8s.elastic.co/cluster-name: {{ template "kubezero-lib.fullname" $ }}
+    {{ include "kubezero-lib.labels" . | nindent 4 }}
   name: {{ template "kubezero-lib.fullname" $ }}-es-elastic-username
   namespace: {{ .Release.Namespace }}
-  labels:
-{{ include "kubezero-lib.labels" . | indent 4 }}
 data:
   username: {{ "elastic" | b64enc | quote }}
 {{- end }}
