--- a/charts/kubezero/values.yaml
+++ b/charts/kubezero/values.yaml
@@ -43,7 +43,7 @@ network:
 cert-manager:
   enabled: false
   namespace: cert-manager
-  targetRevision: 0.9.8
+  targetRevision: 0.9.9
 
 storage:
   enabled: false
@@ -64,13 +64,13 @@ storage:
 istio:
   enabled: false
   namespace: istio-system
-  targetRevision: 0.22.3
+  targetRevision: 0.22.3-1
 
 istio-ingress:
   enabled: false
   chart: kubezero-istio-gateway
   namespace: istio-ingress
-  targetRevision: 0.22.3
+  targetRevision: 0.22.3-1
   gateway:
     service: {}
 
@@ -78,7 +78,7 @@ istio-private-ingress:
   enabled: false
   chart: kubezero-istio-gateway
   namespace: istio-ingress
-  targetRevision: 0.22.3
+  targetRevision: 0.22.3-1
   gateway:
     service: {}
 
