--- a/charts/kubezero-argo/Chart.yaml
+++ b/charts/kubezero-argo/Chart.yaml
@@ -33,4 +33,4 @@ dependencies:
     version: 0.11.0
     repository: https://argoproj.github.io/argo-helm
     condition: argocd-image-updater.enabled
-kubeVersion: ">= 1.26.0"
+kubeVersion: ">= 1.26.0-0"
