--- a/charts/kubezero-network/values.yaml
+++ b/charts/kubezero-network/values.yaml
@@ -27,9 +27,10 @@ multus:
 cilium:
   enabled: false
 
-  # breaks preloaded images otherwise
+  # Always use cached images
   image:
     useDigest: false
+    pullPolicy: Never
 
   resources:
     requests:
