feat: keycloak version bump

--- a/charts/kubezero-auth/values.yaml
+++ b/charts/kubezero-auth/values.yaml
@@ -2,7 +2,7 @@ keycloak:
   enabled: false
 
   production: true
-  hostnameStrict: true
+  hostnameStrict: false
   proxyHeaders: xforwarded
 
   auth:
