feat: add support for custom argo-cd repoServer options

--- a/charts/kubezero/templates/argo.yaml
+++ b/charts/kubezero/templates/argo.yaml
@@ -13,6 +13,9 @@ argo-cd:
   repoServer:
     metrics:
       enabled: {{ .Values.metrics.enabled }}
+    {{- with index .Values "argo" "argo-cd" "repoServer" }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
   server:
     metrics:
       enabled: {{ .Values.metrics.enabled }}
