--- a/charts/kubezero/templates/network.yaml
+++ b/charts/kubezero/templates/network.yaml
@@ -1,11 +1,20 @@
 {{- define "network-values" }}
-
 multus:
   enabled: true
   clusterNetwork: "cilium"
 
+  {{- if eq .Values.global.platform "aws" }}
+  image:
+    pullPolicy: Never
+  {{- end }}
+
 cilium:
   enabled: true
+
+  {{- if eq .Values.global.platform "aws" }}
+  image:
+    pullPolicy: Never
+  {{- end }}
 
   cluster:
     name: {{ .Values.global.clusterName }}
