feat: cleanup SQL module, remove Percona operator

--- a/charts/kubezero-sql/Chart.yaml
+++ b/charts/kubezero-sql/Chart.yaml
@@ -1,15 +1,14 @@
 apiVersion: v2
 name: kubezero-sql
-description: KubeZero umbrella chart for SQL databases, Percona XtraDB Cluster
+description: KubeZero umbrella chart for SQL databases, mariadb-galera
 type: application
-version: 0.3.3
+version: 0.4.0
 home: https://kubezero.com
 icon: https://cdn.zero-downtime.net/assets/kubezero/logo-small-64.png
 keywords:
   - kubezero
-  - mysql
-  - percona
-  #  - postgresql
+  - mariadb
+  - galera
 maintainers:
   - name: Stefan Reimer
     email: stefan@zero-downtime.net
@@ -17,12 +16,8 @@ dependencies:
   - name: kubezero-lib
     version: ">= 0.1.6"
     repository: https://cdn.zero-downtime.net/charts/
-  - name: pxc-operator
-    version: 1.12.1
-    repository: https://percona.github.io/percona-helm-charts/
-    condition: pxc-operator.enabled
   - name: mariadb-galera
     version: 14.0.10
     repository: https://charts.bitnami.com/bitnami
     condition: mariadb-galera.enabled
-kubeVersion: ">= 1.24.0"
+kubeVersion: ">= 1.26.0"
