fix: make mariadb-galera chart render

--- a/charts/kubezero-sql/values.yaml
+++ b/charts/kubezero-sql/values.yaml
@@ -5,8 +5,9 @@ mariadb-galera:
 
   db:
     user: mariadb
-  galera:
-    # For a single node "cluster" force bootstrap
+
+  # For a single node "cluster" force bootstrap
+  #galera:
     #bootstrap:
     #  bootstrapFromNode: 0
     #  forceSafeToBootstrap: true
