feat: upgrade to Kube v1.30.6, Istio SMTP fix

--- a/charts/kubezero-istio-gateway/templates/envoyfilter-listener.yaml
+++ b/charts/kubezero-istio-gateway/templates/envoyfilter-listener.yaml
@@ -19,7 +19,15 @@ spec:
         - name: envoy.filters.listener.proxy_protocol
           typed_config:
             "@type": type.googleapis.com/envoy.extensions.filters.listener.proxy_protocol.v3.ProxyProtocol
+          filter_disabled:
+            destination_port_range:
+              start: 1025
+              end: 1026
         {{- end }}
         - name: envoy.filters.listener.tls_inspector
           typed_config:
             "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
+          filter_disabled:
+            destination_port_range:
+              start: 1025
+              end: 1026
