chore: update docs

--- a/charts/kubeadm/templates/KubeProxyConfiguration.yaml
+++ b/charts/kubeadm/templates/KubeProxyConfiguration.yaml
@@ -5,3 +5,6 @@ metricsBindAddress: "0.0.0.0:10249"
 mode: "iptables"
 logging:
   format: json
+iptables:
+  localhostNodePorts: false
+#nodePortAddresses: primary
