fix: update various Grafana dashboards

--- a/charts/kubezero-metrics/jsonnet/zdt-dashboards.yaml
+++ b/charts/kubezero-metrics/jsonnet/zdt-dashboards.yaml
@@ -6,6 +6,7 @@ dashboards:
   url: file://zdt/home.json
 - name: crio
   url: file://zdt/crio.json
+  #url: https://raw.githubusercontent.com/cri-o/cri-o/refs/heads/main/contrib/metrics-exporter/dashboard.json
   tags: ['kubernetes']
 - name: docker-registry
   url: file://zdt/docker-registry.json
